@@ -48,6 +48,7 @@ Tim Snyder
 Tobias Rosenkranz
 Tobias Wölfel
 Todd Strader
+Vassilis Papaefstathiou
 Veripool API Bot
 Wilson Snyder
 Yossi Nivin
