@@ -195,6 +195,45 @@ module t (/*AUTOARG*/
 
       end
 
+      // testing a wide queue
+      begin
+         typedef struct packed {
+            bit [7:0] opcode;
+            bit [23:0] addr;
+            bit [127:0] data;
+         } instructionW; // named structure type
+
+         instructionW inst_push;
+         instructionW inst_pop;
+
+         instructionW q[$];
+         `checkh($dimensions(q), 2);
+
+         `checkh(q[0].opcode, 0);
+         `checkh(q[0].addr, 0);
+         `checkh(q[0].data, 0);
+
+         inst_push.opcode = 1;
+         inst_push.addr = 42;
+         inst_push.data = {4{32'hdeadbeef}};
+         q.push_back(inst_push);
+         `checkh(q[0].opcode, 1);
+         `checkh(q[0].addr, 42);
+         `checkh(q[0].data, {4{32'hdeadbeef}});
+
+
+         inst_pop = q.pop_front();
+         `checkh(inst_pop.opcode, 1);
+         `checkh(inst_pop.addr, 42);
+         `checkh(inst_pop.data, {4{32'hdeadbeef}});
+
+         `checkh(q.size(), 0);
+
+         `checkh(q[0].opcode, 0);
+         `checkh(q[0].addr, 0);
+         `checkh(q[0].data, 0);
+      end
+
       /* Unsup:
       begin
          int q[4][$];
